<resources>
    <string name="app_name">TODO Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email2">Email:</string>
    <string name="id2">Id:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_task">Add Task</string>
    <string name="date_created">Date created:</string>
    <string name="task_text">Text:</string>
    <string name="date_limit">Date limit:</string>
    <string name="button_set">Set</string>
    <string name="time_limit">Time limit:</string>
    <string name="button_save">Save</string>

    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_tasks">Tasks</string>
    <string name="text_zero">0</string>
    <string name="text_user_name">Name</string>
    <string name="text_user_username">Username</string>
    <string name="text_user_description">Description</string>
    <string name="text_user_profile_picture">User profile picture</string>
    <string name="button_logout">Log out</string>
    <string name="button_follow">Follow user</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="button_following">Following</string>
    <string name="warning_not_following">You are not following this user, please <b>follow</b> to see publications.</string>

    <string name="text_home">Home</string>
    <string name="text_add">Add</string>
    <string name="text_search">Search</string>
    <string name="text_profile">Profile</string>
    <string name="title_activity_nd">NDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">TODO</string>
    <string name="splash_content">TODO</string>
    <string name="tag_publications">Publications</string>
    <string name="tag_followers">Followers</string>
    <string name="tag_following">Following</string>
    <string name="item_description">Description</string>
    <string name="item_owner">Owner</string>
    <string name="item_timeline">Timeline</string>
    <string name="item_likes">no likes</string>
    <string name="item_comments">no comment</string>
    <string name="item_list_name">List name</string>
    <string name="delete_publication">Delete</string>
    <string name="add_username_tag">Enter username</string>
    <string name="tag_username">Tag</string>
    <string name="channel_name">Instagram</string>
    <string name="channel_description">PDS</string>

    <string name="comment">Comments</string>
    <string name="edit_text_comment"> Add a comment...</string>
    <string name="edit_comment_publicated">Edit your comment here:</string>

    <string name="modify_profile">Modify profile</string>
    <string name="hastag">#hastag</string>
    <string name="SearchHastag">Search hastag#</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
