<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/text_home"
            app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/text_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/text_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
</menu>
